# Online_courses_DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test_report.txt
config/: settings.py  urls.py
study/: admin.py  models.py  pagination.py  permissions.py  serializers.py  servises.py  tasks.py  tests.py  urls.py  validators.py  views.py
study/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_user.py  csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py
